Remove some no longer needed deprecated chemical tank methods